# uni_leipzig_calendar

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
src/uni_leipzig_calendar/: almaweb_client.py  flask_app.py  ics_calendar.py  main.py
